--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 header {
-  background-color: #1a237e;
+  background-color: #05083b;
   color: white;
   padding: 60px 20px;
   text-align: center;
